tests/ui/parser/issues/fn-no-semicolon-issue-124935-semi-after-item.stderr
error: expected item, found `;`
  --> $DIR/fn-no-semicolon-issue-124935-semi-after-item.rs:5:1
   |
LL | ;
   | ^
   |
help: remove this semicolon
   |
LL - ;
   |

error: aborting due to 1 previous error

